src/static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;700;900&display=swap');
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Nunito', sans-serif;
    scroll-behavior: smooth;
}

body {
    background-color: #212121;
}

body::-webkit-scrollbar {
    width: 8px;
}

body::-webkit-scrollbar-track {
    background: #373737;
}

body::-webkit-scrollbar-thumb {
    background-color: #00FFC2;
}

h1::selection {
    background: #00FFC2;
    color: #000;
}

span::selection {
    background: #00FFC2;
    color: #000;
}

p::selection {
    background: #00FFC2;
    color: #000;
}

a::selection {
    background: #00FFC2;
    color: #000;
}

h1::-moz-selection {
    background: #00FFC2;
    color: #000;
}

span::-moz-selection {
    background: #00FFC2;
    color: #000;
}

p::-moz-selection {
    background: #00FFC2;
    color: #000;
}

a::-moz-selection {
    background: #00FFC2;
    color: #000;
}

.containerPage {
    display: flex;
    width: 100%;
    height: 100vh;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
}

.header {
    position: fixed;
    top: 0;
    z-index: 1;
    width: 100%;
    background-color: #f1f1f1;
}


/* The progress container (grey background) */

.progress-container {
    width: 100%;
    height: 4px;
    background: #212121;
}


/* The progress bar (scroll indicator) */

.progress-bar {
    height: 4px;
    background: #00FFC2;
    width: 0%;
}

.alinharCentro {
    display: flex;
    justify-content: center;
    align-items: center;
}

.navbar-container {
    width: 100%;
    height: 70px;
    position: absolute;
    top: 0;
}

.texto-link {
    color: #fff;
    font-size: 18px;
    margin: 20px;
    cursor: pointer;
    font-weight: 700;
    border-bottom: 3px solid transparent;
    text-decoration: none;
}

.texto-link:hover {
    color: #00FFC2;
    border-bottom: 3px solid #00FFC2;
}

.landing-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    width: 70%;
}

.landing-text {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
}

.landing-botao {
    width: 100%;
    height: 44px;
    background-color: #00FFC2;
    border-radius: 4px;
    border: none;
    cursor: pointer;
    font-weight: bold;
    margin-top: 60px;
    font-weight: 900;
    color: #212121;
}

.landing-botao:hover {
    background-color: #02edb6;
}

.landing-botao:active {
    background-color: #06cc9e;
}

.landing-container h1 {
    font-size: 64px;
    color: #fff;
    font-weight: 900;
    letter-spacing: 5px;
}

.landing-container span {
    font-size: 24px;
    margin-top: 20px;
    color: #fff;
    font-weight: 200;
}

.opacity-hover:hover {
    opacity: 0.6;
}

.container-section {
    display: flex;
    width: 100%;
    height: 100vh;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
    position: relative;
}

.container-section-three {
    display: flex;
    width: 100%;
    height: 100vh;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
}

.container-section-four {
    display: flex;
    width: 100%;
    height: 100vh;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    position: relative;
}

.background-section-one {
    background-color: #00FFC2;
    width: 100%;
    height: 30vh
}

.card-sobre-mim {
    display: flex;
    background-color: #3A3A3A;
    width: 70%;
    height: 70vh;
    position: absolute;
    margin-top: 100px;
    border-radius: 0px;
    flex-direction: row;
    overflow: hidden;
    border-radius: 20px;
}

.left-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    width: 40%;
}

.right-info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 60%;
    height: 100%;
    overflow: hidden;
}

.right-info h2 {
    font-weight: 700;
    color: #fff;
    margin-left: 30px;
    font-size: 30px;
}

.container-title-sobre-mim {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 100%;
    margin-top: 60px;
}

.title-sobre-mim {
    display: flex;
    justify-content: flex-start;
    align-items: flex-end;
    flex-direction: row;
    width: 80%;
}

#linha-horizontal {
    width: 80%;
    margin-top: 15px;
    border: 2px solid #00FFC2;
    background-color: #00FFC2;
    border-radius: 20px;
}

.container-paragrafo-sobre-mim {
    width: 80%;
    text-align: justify;
}

.container-paragrafo-sobre-mim p {
    color: #fff;
    font-weight: 200;
    margin-top: 10px;
    font-size: 18px;
}

.container-footer-sobre-mim {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 80%;
    margin-bottom: 60px;
}

.container-footer-sobre-mim img {
    cursor: pointer;
}

.button-scroll-up {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80px;
    height: 80px;
    border-radius: 200px;
    background-color: #00FFC2;
    position: fixed;
    bottom: 40px;
    right: 40px;
    border: 3px solid #212121;
    z-index: 1;
    cursor: pointer;
}

.button-scroll-up:hover {
    background-color: #02edb6;
}

.button-scroll-up:active {
    background-color: #06cc9e;
}

.container-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 50%;
}

.download-curriculo {
    width: 50%;
    height: 44px;
    background-color: #00FFC2;
    border-radius: 4px;
    border: none;
    cursor: pointer;
    font-weight: bold;
    margin-top: 60px;
    font-weight: 700;
    color: #212121;
    font-size: 16px;
}

.download-curriculo:hover {
    background-color: #02edb6;
}

.download-curriculo:active {
    background-color: #06cc9e;
}

.left-info img {
    margin-top: 30px;
}

.container-footer {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 100%;
    height: 30px;
    background-color: #00FFC2;  
    margin-top: 100px;  
}

footer span {
    color: #212121;
    font-weight: 400;
    margin-left: 30px;
}

.title {
    font-weight: 900;
    font-size: 20px;
    margin-left: 15px;
    color: #fff;
}

.container-title-experiencia {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 100%;
    margin-top: 20px;
   
}

.container-title-portifolio {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 100%;
    top: 20px;
    position: absolute;
}

.container-skill-progress {
    width: 100%;
    background-color: #ddd;
    border-radius: 20px;
    overflow: hidden;
}

.skills {
    text-align: right;
    color: #212121;
    font-weight: 900;
}

#skills p {
    color: #fff;
    font-weight: 900;
    margin-bottom: 5px;
    margin-top: 10px;
}

#skills h3 {
    color: #fff;
    font-weight: 900;
    margin-bottom: 10px;
    margin-top: 10px;
}

.backend {
    width: 90%;
    background-color: #00FFC2;
    border-radius: 20px 0px 0px 20px;
    padding-right: 10px;
}

.frontend {
    width: 80%;
    background-color: #00FFC2;
    border-radius: 20px 0px 0px 20px;
    padding-right: 10px;
}

.mobile {
    width: 65%;
    background-color: #00FFC2;
    border-radius: 20px 0px 0px 20px;
    padding-right: 10px;
}

.timeline {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
}


/* The actual timeline (the vertical ruler) */

.timeline::after {
    content: '';
    position: absolute;
    width: 6px;
    background-color: #00FFC2;
    top: 0;
    bottom: 0;
    left: 50%;
    margin-left: -3px;
}


/* Container around content */

.container-timeline {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 50%;
}


/* The circles on the timeline */

.container-timeline::after {
    content: '';
    position: absolute;
    width: 25px;
    height: 25px;
    right: -17px;
    background-color: white;
    border: 4px solid #00FFC2;
    top: 15px;
    border-radius: 50%;
    z-index: 1;
}


/* Place the container to the left */

.left {
    left: 0;
}


/* Place the container to the right */

.right {
    left: 50%;
}


/* Add arrows to the left container (pointing right) */

.left::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    right: 30px;
    border: medium solid white;
    border-width: 10px 0 10px 10px;
    border-color: transparent transparent transparent white;
}


/* Add arrows to the right container (pointing left) */

.right::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    left: 30px;
    border: medium solid white;
    border-width: 10px 10px 10px 0;
    border-color: transparent white transparent transparent;
}


/* Fix the circle for containers on the right side */

.right::after {
    left: -16px;
}


/* The actual content */

.content {
    padding: 20px 30px;
    background-color: white;
    position: relative;
    border-radius: 6px;
    border-bottom: 6px solid #00FFC2;
}


/* Media queries - Responsive timeline on screens less than 600px wide */

@media screen and (max-width: 600px) {
    /* Place the timelime to the left */
    .timeline::after {
        left: 31px;
    }
    /* Full-width containers */
    .container-timeline {
        width: 100%;
        padding-left: 70px;
        padding-right: 25px;
    }
    /* Make sure that all arrows are pointing leftwards */
    .container-timeline::before {
        left: 60px;
        border: medium solid white;
        border-width: 10px 10px 10px 0;
        border-color: transparent white transparent transparent;
    }
    /* Make sure all circles are at the same spot */
    .left::after,
    .right::after {
        left: 15px;
    }
    /* Make all right containers behave like the left ones */
    .right {
        left: 0%;
    }
}

.timeline h2 {
    display: flex;
    align-items: center;
    justify-content: f;
    font-weight: 900;
    font-size: 30px;
    color: #212121;    
    padding: 4px;
    border-radius: 4px;
    margin-bottom: 10px;
}

.timeline p {
    font-weight: 700;
}


.timeline span {
    font-weight: 300;
}

.grid-portifolio {
    display: grid;
    width: 70%;
    grid-template-columns: 1fr 1fr;
    grid-gap: 20px;
}

.card-projeto {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    position: relative;
    background-color: #f2f2f2;
    width: 80%;    
    border: 5px solid transparent;
    border-radius: 8px;
    padding: 10px;
    transition: all .2s ease-in-out;    
    margin: auto;    
}


.grid-portifolio .card-projeto h2{
    font-weight: 900;
    font-size: 20px;
    margin-bottom: 5px;
    color: #212121;
    border-bottom: 2px solid transparent;
}

.grid-portifolio .card-projeto h2:hover{
   border-bottom: 2px solid #212121;
}


.grid-portifolio .card-projeto p{
    font-weight: 400;
    font-size: 14px;
}   


.grid-portifolio .card-projeto span{
    font-weight: 200;
    font-size: 12px;
}

.techs{
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

.techs span{
    margin: 4px;
}


.link-projeto {   
    cursor: pointer;    
    text-decoration: none;
}

